refact: 更新领域